--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,10 @@ paginate: 10
 title: The World Geeks Only Know
 email: satriyo.796@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-    I'm not an expert, yet
+    Some codes, some rants, and something else
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://satriyo796.github.io" # the base hostname & protocol for your site
+baseurl: /
 twitter_username: satriyo796
 github_username:  satriyo796
 
