Fix build warnings on github pages
* Change CNAME to github.io
* Change markdown renderer to kramdown
* Change syntax highlighter to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ github_username:  satriyo796
 
 # Build settings
 # Dependencies
-markdown:         redcarpet
-highlighter:      pygments
+markdown:         kramdown
+highlighter:      rouge
 gems:
   - jekyll-gist
   - jekyll-paginate
