--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ paginate: 10
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The World Geeks Only Know
+title: Random Code
 email: satriyo.796@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Some codes, some rants, and something else
