--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ permalink:        pretty
 # relative_permalinks: true
 paginate: 10
 
+excerpt_separator: <!--more-->
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
