--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,8 @@ title: Random Code
 email: satriyo.796@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Some codes, some rants, and something else
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://arseto.github.io" # the base hostname & protocol for your site
-baseurl: /
 twitter_username: satriyo796
 github_username:  satriyo796
 
